@@ -105,7 +105,6 @@ static void GBAInit(void* cpu, struct mCPUComponent* component) {
 	gba->idleOptimization = IDLE_LOOP_REMOVE;
 	gba->idleLoop = IDLE_LOOP_NONE;
 
-	gba->realisticTiming = true;
 	gba->hardCrash = true;
 	gba->allowOpposingDirections = true;
 
