@@ -52,6 +52,7 @@ Misc:
  - PSP2: Use system enter key by default
  - 3DS: Remove deprecated CSND interface
  - Qt: Options to mess around with layer placement
+ - GBA Savedata: Remove ability to disable realistic timing
 
 0.6.3: (2017-04-14)
 Bugfixes:
